Changes in 1.0.3:
- Fix crash in HTTPAnnounceJob due to abort call (244198)
- Show KDE progress dialogs when moving files (244023)
- Fix crash when µTP binding fails (244935)

Changes in 1.0.2:
- Fix subtle bug causing some connections to be dropped prematurely
- Fix bug causing tracker replies with only IPv6 addresses to be misinterpreted as an invalid reply
- Fix bug with sequence number wrapping around in µTP causing bad_alloc's (242042)
- Fix deadlock in µTP code
- Fix crash in DecompressFileJob (243243)

Changes in 1.0.1:
- Make sure that KT binds correctly on systems with net.ipv6.bindv6only set to 1 (238688)
- Fix bug causing seeding of readonly files to fail with no free disk space errors (239023)
- Fix crashes caused by ServerInterface::newConnection being called in µTP thread (240003, 239944)
- Fix crash caused by uncaught exception when saving DHT table (240294)
- Fix bug causing lots of diskspace activity (241339)
- Fix bug causing imported bytes to be counted as downloaded bytes in tracker announces

Changes in 1.0:
- Fix crash at shutdown in when UTP is running (236741)
- Remove some logging messages in UTP code
- Log errors being thrown to better debug uncaught exception bugs

Changes in 1.0rc1:
- Add support for base32 magnet links
- Update torrent status properly when torrent is in seeding complete state and a new file is selected for downloading (232278)
- Fix crash in PeerConnector destruction (233775)
- Make move on completion a per torrent feature
- Make sure that during loading of the stats, they are not saved again
- Fix crash caused by dangling pointer to PollPipe
- Add method to calculate the average download speed since the last unchoke of a peer
- Add doxygen api docs generation with cmake
- Remove all KMessageBox's, the client application needs to handle these errors
- Fix crash due to uncaught exception in UTP code