@@ -55,6 +55,9 @@ namespace bt
 		/// Start connecting
 		void start();
 		
+		/// Stop connecting
+		void stop();
+		
 	private:
 		void start(Method method);
 		
